--- a/popup/popup.css
+++ b/popup/popup.css
@@ -72,7 +72,7 @@ h3{
     text-align: center; */
       width: 300px;
       padding: 20px;
-      background-color: #f9f9f9;
+      background-color: transparent !important;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       text-align: center;
