--- a/popup/popup.css
+++ b/popup/popup.css
@@ -49,7 +49,6 @@ h3{
 
 .plus-button {
     margin-top: 20px;
-    margin-left: 50px;
     width: 120px;
     height: 40px;
     background-color: rgb(0, 177, 118);
@@ -58,6 +57,12 @@ h3{
     border: none;
     cursor: pointer;
     border-radius: 5px;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .input-field {
@@ -220,10 +225,12 @@ ul {
 
 /* CSS for subscription cards */
 .subscription-card {
+  flex: 0 0 calc(50% - 20px); /* Two cards in each row */
+  margin: 10px auto; /* Center the cards horizontally */
+  max-width: 300px; /* Set a maximum width for the cards */
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
-  margin-bottom: 10px;
   background-color: #f9f9f9;
 }
 
@@ -233,6 +240,7 @@ ul {
 
 /* Optional: Add hover effect */
 .subscription-card:hover {
+  cursor: pointer;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
@@ -300,4 +308,17 @@ ul {
   width: 50px;
   height: 50px;
   margin-left: 50px;
+}
+
+.update-btn {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.update-btn:hover {
+  background-color: #0056b3;
 }
