--- a/popup/popup.css
+++ b/popup/popup.css
@@ -200,7 +200,7 @@ ul {
     list-style-type: none;
   }
 
-#add-subscription-form {
+#add-subscription-form, #update-subscription-form {
     width: 300px;
     margin: 20px auto;
     padding: 20px;
@@ -227,11 +227,12 @@ ul {
 .subscription-card {
   flex: 0 0 calc(50% - 20px); /* Two cards in each row */
   margin: 10px auto; /* Center the cards horizontally */
-  max-width: 300px; /* Set a maximum width for the cards */
+  max-width: 1000px; /* Set a maximum width for the cards */
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
-  background-color: #f9f9f9;
+  background-color: #b9b9b9;
+  color: black;
 }
 
 .subscription-card p {
@@ -321,4 +322,18 @@ ul {
 
 .update-btn:hover {
   background-color: #0056b3;
+}
+
+.delete-btn {
+  background-color: #ae0000;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+.delete-btn:hover {
+  background-color: #da0000;
 }
