add login popup

--- a/options/options.css
+++ b/options/options.css
@@ -1,6 +1,6 @@
 /* Options page styles go here */
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Jacques Francois", sans-serif;
   padding: 20px;
 }
 
