--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Jacques Francois", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #2c2c2c; /* Darker background color */
@@ -298,4 +298,68 @@ header {
 
 .login-button:hover {
   box-shadow: #555 0 0 10px;
+}
+
+/* Popup styles */
+.popup-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  display: none;
+  z-index: 999;
+  width: 30vw;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Style for the login button */
+.login-button {
+  cursor: pointer;
+}
+
+.popup-container.active {
+  display: block;
+}
+
+/* Additional styling for form elements */
+input[type="text"],
+input[type="password"],
+button[type="submit"] {
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+}
+
+button[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s;
+}
+
+button[type="submit"]:hover {
+  background-color: #45a049;
+}
+.new-here, .forgot-password {
+  text-align: center;
+  margin-top: 10px;
+  text-decoration: none;
+  color: #555;
+}
+
+.forgot-password {
+  margin-bottom: 15px;
+  cursor: pointer;
 }
