--- a/popup/popup.css
+++ b/popup/popup.css
@@ -418,3 +418,59 @@ button[type="submit"]:hover {
 #myChart {
   margin: 20vh 25vw;
 }
+
+.multi-select-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 30px;
+  margin-top: 30px;
+}
+
+.multi-select-item {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  gap:15px;
+}
+
+.multi-select-label {
+  display: block;
+  width: 125px; /* Adjust width as needed */
+  height: 25px; /* Adjust height as needed */
+  border: 2px solid #8d8d8d; /* Border color */
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.item-image {
+  width: 14px;
+  height: 14px;
+  object-fit: cover;
+  cursor: pointer;
+  border-radius: 100%;
+  margin-left: 10px;
+  margin-bottom: -2px;
+}
+
+.multi-select-checkbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.multi-select-checkbox:checked + .multi-select-label {
+  border-color: #007bff; /* Change border color when checked */
+}
+
+.multi-select-checkbox:checked + .multi-select-label:before {
+  content: '\2713'; /* Unicode checkmark symbol */
+  font-size: 20px;
+  color: #007bff;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
