--- a/popup/popup.css
+++ b/popup/popup.css
@@ -487,3 +487,7 @@ button[type="submit"]:hover {
   background-color: #f1f1f1; /* Light background color in light mode */
   color: #333; /* Dark text color in light mode */
 }
+
+.light-mode .header a {
+  color: #333 !important; /* Dark text color in light mode */
+}
