--- a/popup/popup.css
+++ b/popup/popup.css
@@ -491,3 +491,37 @@ button[type="submit"]:hover {
 .light-mode .header a {
   color: #333 !important; /* Dark text color in light mode */
 }
+
+.submit-otp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #45a049;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 10px 20px;
+  margin-top: 20px;
+  width: 25%;
+}
+
+.otp {
+  display: flex;
+  width: 300px;
+  gap: 20px;
+  margin-left: -170px;
+  margin-top: 20px;
+}
+
+.otp input {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.resend-otp {
+  color: #3cbc00;
+  cursor: pointer;
+}
