--- a/popup/popup.css
+++ b/popup/popup.css
@@ -534,3 +534,33 @@ button[type="submit"]:hover {
 .light-mode .header a {
   color: #333; /* Dark text color in light mode */
 }
+
+/* Add styles for update subscription form */
+.update-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.update-form input[type="text"],
+.update-form input[type="number"],
+.update-form input[type="date"],
+.update-form button[type="submit"] {
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+  width: 25vw;
+}
+
+.update-btn {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s;
+  width: 25vw;
+  height: 5vh;
+}
