--- a/popup/popup.css
+++ b/popup/popup.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .subscription-container {
@@ -505,8 +505,7 @@ button[type="submit"]:hover {
   cursor: pointer;
   padding: 10px 20px;
   margin-top: 20px;
-  margin-left: -78px;
-  width: 215%;
+  width: 125%;
 }
 
 .otp {
@@ -598,4 +597,84 @@ button[type="submit"]:hover {
   transition: background-color 0.5s;
   width: 25vw;
   height: 5vh;
+}
+
+.add-subscription {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s;
+  width: 25vw;
+  height: 5vh;
+}
+
+.align-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -100px;
+  margin-bottom: 30px;
+}
+
+
+/* Additional styles for the subscription form */
+#subscription-form {
+  max-width: 400px;
+  margin: 20px auto; /* Adjusted margin */
+  padding: 20px;
+  background-color: transparent
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#subscription-form label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+#subscription-form input[type="text"],
+#subscription-form input[type="date"],
+#subscription-form input[type="number"],
+#subscription-form select {
+  width: calc(100% - 12px);
+  padding: 8px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+#subscription-form button[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+#subscription-form button[type="submit"]:hover {
+  background-color: #409843;
+}
+
+@media (max-width: 480px) {
+  #subscription-form {
+    width: 90%;
+  }
+}
+
+.new-password {
+  width: 250%;
+  margin-top: 30px;
+}
+
+#otp-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
