--- a/popup/popup.css
+++ b/popup/popup.css
@@ -678,3 +678,14 @@ button[type="submit"]:hover {
   flex-direction: column;
   align-items: center;
 }
+
+/* update-plan same as update-name */
+.update-plan, .update-category {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 5vh;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
